--- a/source/_posts/事务隔离级别.md
+++ b/source/_posts/事务隔离级别.md
@@ -1,7 +1,11 @@
 ---
 title: 事务隔离级别
 date: 2018-11-12 14:23:01
-tags: 事务
+tags: 
+	- 事务
+	- MySQL
+categories:
+	- Transaction
 ---
 
 # MySQL--事务（Transaction）
