--- a/source/_posts/事务隔离级别.md
+++ b/source/_posts/事务隔离级别.md
@@ -27,7 +27,7 @@ categories:
 
 **小结**：不可重复读和幻读很容易混淆，不可重复读侧重于修改，幻读侧重于新增和删除。解决不可重复读的问题只需要锁住满足条件的行，解决幻读需要锁表。
 
-
+<!-- more -->
 
 ### 三、MySQL事务隔离级别
 
