Spring失误传播机制

--- a/source/_posts/事务隔离级别.md
+++ b/source/_posts/事务隔离级别.md
@@ -10,7 +10,7 @@ categories:
 
 # MySQL--事务（Transaction）
 
-### 一、事务的基本要素（ACID）
+### 事务的基本要素（ACID）
 
 * **原子性**（Atomicity）：事务开始后所有操作，要么全部做完，要么全部不做，不可能停滞在中间环节。事务执行过程中出错，会回滚到事务开始前的状态，所有的操作就想没有发生一样。也就是说事务是一个不可分割的整体。
 * **一致性**（Consistency）：事务开始前和结束后，数据库的完整性约束没有被破坏。比如A向B转账，不可能A扣了钱，B却没有收到。
@@ -19,7 +19,7 @@ categories:
 
 
 
-### 二、事务的并发问题
+### 事务的并发问题
 
 * **脏读**：事务A读取了事务B更新的数据，然后B回滚操作，那么A读取到的数据是脏数据。
 * **不可重复读**：事务A多次读取同一数据，事务B在事务A多次读取的过程中，对数据作了更新并提交，导致事务A多次读取同一数据时，结果不一致。
@@ -29,7 +29,7 @@ categories:
 
 <!-- more -->
 
-### 三、MySQL事务隔离级别
+### MySQL事务隔离级别
 
 |         事务隔离级别         | 脏读 | 不可重复读 |         幻读          |
 | :--------------------------: | :--: | :--------: | :-------------------: |
@@ -81,7 +81,7 @@ categories:
 
 
 
-### 四、基本操作
+### 基本操作
 
 ```bash
 - 查询当前事务级别
@@ -92,7 +92,7 @@ SET [GLOBAL | SESSION] TRANSACTION ISOLATION LEVEL <isolation-level>
 
 
 
-### 五、补充
+### 补充
 
 * 事务隔离级别为读提交时，写数据只会锁住相应的行
 
